fixed text + footer overlap on landscape mobile

--- a/style.css
+++ b/style.css
@@ -2262,7 +2262,7 @@
         }
     
         .pg4-rightcol {
-            font-size: 12px;
+            font-size: 10.5px;
             font-family: 'Lato', sans-serif;
             position: absolute;
             top: 17%;
